[tool.poetry]
name = "dt"
version = "1.1.73"
description = "Dynatrace API Python client"
readme = "README.md"
authors = ["David Lopes <davidribeirolopes@gmail.com>"]
maintainers = [
    "David Lopes <davidribeirolopes@gmail.com>",
    "James Kitson <james.kitson@dynatrace.com>",
    "Vagiz Duseev <vagiz@duseev.com>"
]
homepage = "https://github.com/dynatrace-oss/api-client-python"
repository = "https://github.com/dynatrace-oss/api-client-python"
documentation = "https://github.com/dynatrace-oss/api-client-python"
packages = [
    { include = "dynatrace*" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = ">=3.6"
requests = ">=2.22"

[tool.poetry.group.dev.dependencies]
pytest = "*"
mock = "*"
tox = "*"
wrapt = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
